k8s/base/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflix-catalog
  namespace: miniflix
spec:
  selector:
    app: miniflix-catalog
  ports:
    - name: http
      port: 80
      targetPort: 5000
