k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflix-frontend
  namespace: miniflix
spec:
  selector:
    app: miniflix-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
