k8s/base/miniflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflix-ingress
  namespace: miniflix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: miniflix-catalog
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflix-frontend
                port:
                  number: 80
